--- a/navbar.html
+++ b/navbar.html
@@ -26,7 +26,7 @@
                         <div class="dropdown show dropleft">
                             <div class="dropdown-menu " aria-labelledby="dLabel">
                                 <a class="dropdown-item" href="./play.html">Dice Decider</a>
-                                <a class="dropdown-item" href="./simonGame.html">Simon Gmae</a>
+                                <a class="dropdown-item" href="./simonGame.html">Simon Game</a>
                             </div>
                         </div>
                     </li>
