add drum to play

--- a/navbar.html
+++ b/navbar.html
@@ -27,6 +27,7 @@
                             <div class="dropdown-menu " aria-labelledby="dLabel">
                                 <a class="dropdown-item" href="./play.html">Dice Decider</a>
                                 <a class="dropdown-item" href="./simonGame.html">Simon Game</a>
+                                <a class="dropdown-item" href="./drumKit.html">Drum Kit</a>
                             </div>
                         </div>
                     </li>
